button functionality implemented

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,13 +42,13 @@ body {
     display: flex;
     justify-content: space-between;
     width: 90%;
+    flex-wrap: wrap;
 }
 
 .board {
     background-color: $cell-bg;
     border-radius: 5px;
     padding: 20px;
-    margin-bottom: 40px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 45%; 
 
