--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,7 +20,16 @@ body {
     padding: 0 50px;
 }
 
-#startGameBtn {
+#mainContainer {
+    width: 100%;
+    max-width: 1200px; // o el ancho máximo que desees
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+#startGameButton {
     background-color: $btn-bg;
     color: white;
     padding: 10px 20px;
