--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,9 +4,11 @@
 $board-bg: #f7f9fc;
 $cell-bg: #ffffff;
 $cell-border: #d1d5db;
-$cell-size: 40px;
+$cell-size: 10%;
 $btn-bg: #007bff;
 $btn-hover-bg: darken($btn-bg, 10%);
+$board-padding: 20px; // Definir la variable
+
 
 // Estilos generales
 body {
@@ -51,6 +53,7 @@ body {
     display: flex;
     justify-content: space-between;
     width: 90%;
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
@@ -59,21 +62,29 @@ body {
     border-radius: 5px;
     padding: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 45%; 
+    width: 100%;
+    max-width: 45%;
+    margin: 0 auto;
+    overflow: hidden;
 
     h2 {
         text-align: center;
+        font-size: 1.5em;
         margin-bottom: 20px;
     }
 
+
     .grid {
         display: grid;
-        grid-template-columns: repeat(10, $cell-size);
-        gap: 5px;
+        grid-template-columns: repeat(10, 10%);
+        grid-template-rows: repeat(10, 10%);
+        width: 100%;
+        max-width: 500px; // o cualquier tamaño máximo que desees
+        position: relative;
+        aspect-ratio: 1/1; // Esto mantiene la relación de aspecto cuadrada para .grid
 
         .cell {
-            width: $cell-size;
-            height: $cell-size;
+            position: relative;
             background-color: $cell-bg;
             border: 1px solid $cell-border;
             border-radius: 3px;
@@ -83,5 +94,16 @@ body {
                 background-color: lighten($cell-bg, 10%);
             }
         }
+    }
+
+
+}
+
+
+@media (max-width: 768px) {
+
+    .container {
+        flex-direction: column;
+        align-items: center;
     }
 }
