--- a/sass/main.scss
+++ b/sass/main.scss
@@ -99,6 +99,10 @@ body {
 
 }
 
+.cell.hover-highlight {
+    background-color: rgba(0, 128, 255, 0.5); /* Color azul semi-transparente */
+}
+
 
 @media (max-width: 768px) {
 
