--- a/sass/main.scss
+++ b/sass/main.scss
@@ -99,8 +99,8 @@ body {
 
 }
 
-.cell.hover-highlight {
-    background-color: rgba(0, 128, 255, 0.5); /* Color azul semi-transparente */
+.cell-preview {
+    background-color: #1c6db9; 
 }
 
 
