partial implementation of manualPlacement

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -114,6 +114,14 @@ body {
     background-color: blue;
 }
 
+.cell.green {
+    background-color: green !important;
+}
+
+.cell.red {
+    background-color: red !important;
+}
+
 
 
 /* Estilos para cuando la ventana tenga una estrechura menor a 500px */
