--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,5 @@
+@import "~font-awesome/css/font-awesome.min.css";
+
 body {
     font-family: 'Arial', sans-serif;
     height: 100vh;
@@ -55,6 +57,7 @@ body {
     justify-content: center;
     align-items: flex-start;
     padding: 0;
+    /* margin-top: 0; */
     margin-bottom: 50px;
 }
 
@@ -116,10 +119,37 @@ body {
 
 .cell.green {
     background-color: green !important;
+    cursor: pointer;
 }
 
 .cell.red {
     background-color: red !important;
+    cursor: default;
+}
+
+.playerBoardBelow, .computerBoardBelow {
+    height: 125px; /* O cualquier altura que consideres apropiada */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.changeDirButton {
+    padding: 10px 20px;
+    font-size: 24px;
+    background-color: #007BFF;
+    color: white;
+    border-radius: 10px;
+    font-weight: 600;  /* Puedes considerar agregar una fuente Google si lo prefieres */
+}
+
+.changeDirButton:hover {
+    background-color: #0056b3;
+}
+
+.changeDirButton:active {
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    transform: scale(0.98);  /* Hace que el botón se reduzca ligeramente cuando se presiona */
 }
 
 
