Game implemented (with dumb ai) and test implemented (without computerTurn).

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -139,8 +139,14 @@ body {
     cursor: default;
 }
 
-.cell.empty, .cell.ship {
+.computerBoardContainer .cell.empty,
+.computerBoardContainer .cell.ship {
     cursor: pointer;
+}
+
+.playerBoardContainer .cell.empty,
+.playerBoardContainer .cell.ship {
+    cursor: default;
 }
 
 
