--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,37 +3,38 @@
 body {
     font-family: 'Arial', sans-serif;
     height: 100vh;
-    max-height: 100vh; /* Asegura que body no exceda la altura de la ventana */
+    max-height: 100vh;
     width: 100vw;
-    max-width: 100vw; /* Asegura que body no exceda el ancho de la ventana */
-    background-color: #f5f5f5;
+    max-width: 100vw;
+    background-color: #fff;
     margin: 0;
-    overflow: hidden; /* Esconde cualquier desbordamiento */
+    overflow: hidden;
 }
 
 .mainPage {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     text-align: center;
     padding: 200px;
     background-color: #fff;
     height: 100vh;
-    max-height: 100vh; /* Asegura que mainPage no exceda la altura de la ventana */
+    max-height: 100vh;
     width: 100vw;
-    max-width: 100vw; /* Asegura que mainPage no exceda el ancho de la ventana */
-    box-sizing: border-box; /* Incluye el padding y el borde en el ancho/alto total */
+    max-width: 100vw;
+    box-sizing: border-box;
 }
 
 .title {
+    font-family: 'Noto Sans', sans-serif;
     font-size: 64px;
     margin-bottom: 40px;
 }
 
 .smallTitle {
-    font-size: 32px; /* Reduce el tamaño de la fuente */
-    margin: 0;
+    font-size: 32px;
+    margin-bottom: 0;
+    margin-top: 20px;
 }
 
 .startButton {
@@ -41,14 +42,17 @@ body {
     border: none;
     border-radius: 15px;
     cursor: pointer;
-    background-color: #007BFF;
+    background-color: black;
     transition: background-color 0.3s ease;
     font-size: 18px;
     color: white;
 }
 
 .startButton:hover {
-    background-color: #0056b3;
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 }
 
 .titleSpace {
@@ -57,8 +61,28 @@ body {
     justify-content: center;
     align-items: flex-start;
     padding: 0;
-    /* margin-top: 0; */
-    margin-bottom: 50px;
+    margin-bottom: 20px;
+}
+
+.titleSpace, .iconContainer, .titleContainer {
+    display: block;
+    text-align: center;
+  }
+  
+.shipIcon {
+    height: 100px;
+    width: auto;
+    display: block;
+    margin: 0 auto;
+}
+
+.copyright {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 25px;
+    /* put it at the bottom of the page */
+    position: absolute;
+    bottom: 0;
 }
 
 .boardsSpace {
@@ -83,59 +107,58 @@ body {
 
 
 .playerBoardContainer, .computerBoardContainer {
-    min-width: 400px; /* No será más pequeño que 400px. */
+    min-width: 400px;
     aspect-ratio: 1;
-    /* background-color: #e1e1e1; */
     margin: 0 2.5vw;
-    position: relative; /* Establece posición relativa para que los elementos de etiqueta sean relativos a este contenedor */
-    margin-top: 40px; /* Aumenta el espacio entre el título y el tablero */
+    position: relative;
+    margin-top: 40px;
     
 
 }
 
-/* Estilos para contenedor de tablero */
+/* Styles for board container */
 .board-container {
-    display: grid; /* Utiliza un sistema de cuadrícula para organizar las celdas */
-    grid-template-columns: repeat(10, 40px); /* Cambia el tamaño de las columnas a 40px */
-    grid-template-rows: repeat(10, 40px); /* Cambia el tamaño de las filas a 40px */
-    margin: 0 auto; /* Centra el tablero horizontalmente en su contenedor */
+    display: grid;
+    grid-template-columns: repeat(10, 40px);
+    grid-template-rows: repeat(10, 40px);
+    margin: 0 auto;
 }
 
-/* Estilos de las celdas */
+/* Cell styles */
 .cell {
     aspect-ratio: 1;
-    background-color: white; /* Fondo blanco para celdas vacías */
-    border: 0.5px solid #000; /* Línea negra para bordes de celdas */
+    background-color: white;
+    border: 0.5px solid #000;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 18px;
     font-weight: bold;
-    color: transparent; /* Hace que el contenido de la celda sea transparente */
+    color: transparent;
 }
 
 .cell.blue {
-    background-color: blue;
+    background-color: black !important;
 }
 
 .cell.green {
-    background-color: green !important;
+    background-color: black !important;
     cursor: pointer;
 }
 
 .cell.red {
-    background-color: red !important;
+    background-color: rgb(220, 60, 60) !important;
     cursor: default;
 }
 
 .cell.hit {
-    background-color: red !important;
+    background-color: rgb(220, 60, 60) !important;
     cursor: default;
 }
 
 .cell.miss {
-    background-color: grey !important;
-    color: black; /* Esto hará que el texto "X" sea negro */
+    background-color: rgb(177, 176, 176) !important;
+    color: black;
     cursor: default;
 }
 
@@ -151,7 +174,7 @@ body {
 
 
 .playerBoardBelow, .computerBoardBelow {
-    height: 125px; /* O cualquier altura que consideres apropiada */
+    height: 125px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -160,32 +183,34 @@ body {
 .changeDirButton {
     padding: 10px 20px;
     font-size: 24px;
-    background-color: #007BFF;
+    background-color: black;
     color: white;
     border-radius: 10px;
-    font-weight: 600;  /* Puedes considerar agregar una fuente Google si lo prefieres */
+    font-weight: 600;
+    cursor: pointer
 }
 
 .changeDirButton:hover {
-    background-color: #0056b3;
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 }
 
 .changeDirButton:active {
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-    transform: scale(0.98);  /* Hace que el botón se reduzca ligeramente cuando se presiona */
+    transform: scale(0.98);
 }
 
 
-
-/* Estilos para cuando la ventana tenga una estrechura menor a 500px */
 @media (max-width: 500px) {
     .boardsSpace {
         flex-direction: column;
     }
 
     .computerBoardContainer, .playerBoardContainer {
-        width: 80%; /* O el ancho que desees para esta estrechura */
-        margin: 10px auto; /* Centra los tableros y añade un pequeño margen entre ellos */
+        width: 80%;
+        margin: 10px auto;
     }
 }
 
